<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".screens.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/pokemon_toolbar" />

    <LinearLayout
        android:id="@+id/searchBox"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/offset"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:autofillHints="0"
            android:hint="@string/start_from"
            android:inputType="number" />

        <EditText
            android:id="@+id/limit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:hint="@string/quantity"
            android:inputType="number" />

        <ImageView
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/purple_700"
            android:padding="20dp"
            android:src="@drawable/ic_baseline_search_24" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pokemonRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:spanCount="2"
        tools:itemCount="16"
        tools:listitem="@layout/pokemon_list_view" />

    <ImageView
        android:id="@+id/noNetworkIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_cloud_off_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noNetwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_network"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noNetworkIcon" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>