<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.ProfileActivity">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/teal_700"
            android:orientation="vertical"
            android:paddingTop="85dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline3">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <GridLayout
                    android:id="@+id/galleryGrid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/backDefault"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:visibility="gone"
                        android:background="@drawable/img_bg" />

                    <ImageView
                        android:id="@+id/backFemale"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:visibility="gone"
                        android:background="@drawable/img_bg"/>

                    <ImageView
                        android:id="@+id/backShiny"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:visibility="gone"
                        android:background="@drawable/img_bg" />

                    <ImageView
                        android:id="@+id/backShinyFemale"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:visibility="gone"
                        android:background="@drawable/img_bg" />

                    <ImageView
                        android:id="@+id/frontDefault"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:visibility="gone"
                        android:background="@drawable/img_bg" />

                    <ImageView
                        android:id="@+id/frontFemale"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:visibility="gone"
                        android:background="@drawable/img_bg" />

                    <ImageView
                        android:id="@+id/frontShiny"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:visibility="gone"
                        android:background="@drawable/img_bg" />

                    <ImageView
                        android:id="@+id/frontShinyFemale"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:visibility="gone"
                        android:background="@drawable/img_bg" />

                </GridLayout>

            </HorizontalScrollView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/moves"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/moveRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:itemCount="40"
                app:spanCount="3"
                tools:listitem="@layout/move"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/pokemonImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toTopOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/height"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/weight"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="294dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="186dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="59dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
